--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="insugraph.db" />
+            android:value="diadiary.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
