--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         </activity>
 
-        <activity android:name="sf.net.dvstar.diadiary.activity.DiaryActionActivity"
+        <activity android:name=".activity.DiaryActionsActivity"
             android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher"
             android:theme="@style/AppTheme.NoActionBar">
