--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sf.net.dvstar.diadiary" >
+    package="sf.net.dvstar.diadiary">
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="sf.net.dvstar.diadiary.MainApplication"
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="sf.net.dvstar.diadiary.activity.DiagramActivity"
+            android:name=".activity.DiagramActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-        </activity>
-
-        <activity android:name=".activity.DiaryActionsActivity"
-            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.DiaryActionsActivity"
             android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="sf.net.dvstar.diadiary.activity.InsulinInjectAddActivity" />
-        <activity android:name="sf.net.dvstar.diadiary.activity.InsulinDescActivity" />
-        <activity android:name="sf.net.dvstar.diadiary.activity.InsulinDescAddActivity" />
-        <activity android:name="sf.net.dvstar.diadiary.activity.DiaryGlucoseAddActivity" />
-        <activity android:name="sf.net.dvstar.diadiary.activity.AboutActivity" />
+        <activity android:name=".activity.InsulinInjectAddActivity" />
+        <activity android:name=".activity.InsulinDescActivity" />
+        <activity android:name=".activity.InsulinDescAddActivity" />
+        <activity android:name=".activity.DiaryGlucoseAddActivity" />
+        <activity android:name=".activity.DiaryPressureAddActivity" />
+        <activity android:name=".activity.AboutActivity" />
 
         <meta-data
             android:name="AA_DB_NAME"
@@ -38,6 +41,10 @@
             android:name="AA_DB_VERSION"
             android:value="1" />
 
+        <activity
+            android:name=".activity.DatabaseActivity"
+            android:label="@string/title_activity_database"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
