--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".activity.DiagramActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.DiaryActionsActivity"
             android:icon="@mipmap/ic_launcher"
@@ -44,7 +44,9 @@
         <activity
             android:name=".activity.DatabaseActivity"
             android:label="@string/title_activity_database"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.ProdGroupActivity"></activity>
+        <activity android:name=".activity.ProdItemActivity"></activity>
     </application>
 
 </manifest>
