--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,13 @@
             android:name=".activity.DatabaseActivity"
             android:label="@string/title_activity_database"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.ProdGroupActivity"></activity>
-        <activity android:name=".activity.ProdItemActivity"></activity>
+        <activity android:name=".activity.ProdGroupActivity"/>
+        <activity android:name=".activity.ProdItemActivity"/>
+        <activity android:name=".activity.ProdMenuActivity"/>
+        <activity android:name=".activity.SettingActivity" android:label="@string/activity_settings_title"/>
+        <activity android:name=".activity.UserProfileActivity" android:label="@string/activity_profile_title"/>
+        <activity android:name=".activity.ProdMenuAddActivity" android:label="@string/activity_menuadd_title"/>
+        <activity android:name=".activity.ProdItemAddActivity"/>
     </application>
 
 </manifest>
