--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.ProdGroupActivity"/>
         <activity android:name=".activity.ProdItemActivity"/>
-        <activity android:name=".activity.ProdMenuActivity"/>
+        <activity android:name=".activity.ProdMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/action_products"/>
         <activity android:name=".activity.SettingActivity" android:label="@string/activity_settings_title"/>
         <activity android:name=".activity.UserProfileActivity" android:label="@string/activity_profile_title"/>
         <activity android:name=".activity.ProdMenuAddActivity" android:label="@string/activity_menuadd_title"/>
