--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,16 @@ repositories {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
+    //    compile 'com.github.clans:fab_menu_action:1.6.1'
+    //    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    //    compile 'com.github.clans:fab_menu_action:1.6.1'
     compile 'com.github.Clans:FloatingActionButton:v1.6.1'
-    //    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile 'com.google.android.gms:play-services-identity:8.3.0'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
 }
